--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,13 @@
 
 body {
   background: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
