main: fix template reloads

--- a/src/components/ShuttleSplit/ShuttleSplit.css
+++ b/src/components/ShuttleSplit/ShuttleSplit.css
@@ -1,6 +1,6 @@
 .shuttle-split {
   padding: 20px 6%;
-  background-image: url('./../../assets/split-form-background.png');
+  background-image: url('./../../assets/split-form-background.webp');
   min-height: 100vh;
   height: 100%;
   color: #39545e;
