--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,11 @@ body {
 }
 
 button {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: inherit
+}
+
+input {
+  font-family: inherit;
 }
 
 html {
@@ -36,4 +40,49 @@ html {
 .btn-normal:hover {
   background-color: #39545e;
   font-weight: 600;
+}
+
+.icon:hover {
+  filter: brightness(0) saturate(100%) invert(29%) sepia(21%) saturate(630%) hue-rotate(150deg) brightness(96%) contrast(92%);
+  animation: bounce 0.6s ease;
+}
+
+.icon {
+  filter: brightness(0) saturate(100%) invert(41%) sepia(70%) saturate(201%) hue-rotate(149deg) brightness(94%) contrast(90%);
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+
+  30% {
+    transform: translateY(5px);
+  }
+
+  60% {
+    transform: translateY(-3px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.icon-danger {
+  filter: brightness(0) saturate(100%) invert(34%) sepia(43%) saturate(1941%) hue-rotate(335deg) brightness(92%) contrast(83%);
+}
+
+.icon-danger:hover {
+  filter: brightness(0) saturate(100%) invert(21%) sepia(61%) saturate(4557%) hue-rotate(353deg) brightness(78%) contrast(92%);
+}
+
+.icon-normal {
+  filter: brightness(0) saturate(100%) invert(76%) sepia(16%) saturate(184%) hue-rotate(354deg) brightness(81%) contrast(83%);
+}
+
+.icon-normal:hover {
+  filter: brightness(0) saturate(100%) invert(53%) sepia(2%) saturate(8%) hue-rotate(58deg) brightness(94%) contrast(97%);
 }
